parsing date completed