@@ -1,5 +1,9 @@
 package account.payment;
 
+import account.payment.model.Payment;
+import account.payment.model.dto.PaymentDtoMapper;
+import account.payment.model.dto.PaymentDtoRequest;
+import account.payment.model.dto.PaymentDtoResponse;
 import account.user.UserRepository;
 import account.user.model.User;
 import lombok.RequiredArgsConstructor;
@@ -8,10 +12,11 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
+import java.time.LocalDate;
+import java.util.Date;
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -38,13 +43,38 @@ public class PaymentService {
         });
     }
 
+
+    private boolean validIfUserExist(String email) {
+        return userRepository.findByEmailIgnoreCase(email).isPresent();
+    }
+
     public List<PaymentDtoResponse> getAllPaymentsByUser(User user) {
 
         return paymentRepository.findPaymentByUser(user)
                 .stream()
                 .map(mapper::map)
-                .toList();
+                .collect(Collectors.toList());
+
 
     }
 
+    public void updatePayment(PaymentDtoRequest paymentDtoRequest) {
+
+        User user = userRepository.findByEmailIgnoreCase(paymentDtoRequest.getEmployee())
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "User not found"));
+
+        Payment payment = paymentRepository.findPaymentByUserAndPeriod(user, paymentDtoRequest.getPeriod())
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "Payment not found"));
+
+        payment.setSalary(paymentDtoRequest.getSalary());
+        paymentRepository.save(payment);
+    }
+
+    public Optional<PaymentDtoResponse> getPaymentByPeriod(User user, String period) {
+
+        return paymentRepository
+                .findPaymentByUserAndPeriod(user, period)
+                .map(mapper::map);
+
+    }
 }
